# dustbin

./: Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: ci.yml
docs/: configuration.md  how-it-works.md  inventory.md  trash.md
src/: cli.rs  config.rs  defaults.rs  deps.rs  main.rs  package.rs  storage.rs  ui.rs  utils.rs
src/commands/: clean.rs  completions.rs  config.rs  daemon.rs  deps.rs  dupes.rs  inventory.rs  lifecycle.rs  log.rs  mod.rs  report.rs  restore.rs  size.rs  stats.rs  status.rs  trash.rs  why.rs
src/platform/: linux.rs  linux_distro.rs  macos.rs  mod.rs
