[package]
name = "dustbin"
version = "0.1.0"
edition = "2024"
description = "Find your dusty binaries - track which installed packages you actually use"
license = "MIT"
repository = "https://github.com/PoHsuanLai/dustbin"
readme = "README.md"
keywords = ["cli", "packages", "cleanup", "homebrew", "cargo"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
indicatif = "0.18.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tabled = "0.20.0"
toml = "0.9.11"
