[package]
name = "dusty"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Po-Hsuan Lai"]
description = "Find your dusty binaries - track which installed packages you actually use"
license = "MIT"
repository = "https://github.com/PoHsuanLai/dusty"
readme = "README.md"
keywords = ["cli", "packages", "cleanup", "homebrew", "cargo"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/", ".claude/", ".DS_Store", "assets/", "demo.tape", "docs/"]

[dependencies]
anyhow = "1.0.101"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5"
console = "0.16.2"
dialoguer = "0.12.0"
dirs = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

toml = "0.9.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
